--- a/src/app/pages/folder/folder.page.html
+++ b/src/app/pages/folder/folder.page.html
@@ -1,9 +1,10 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-menu-button color="secondary"></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{ folder }}</ion-title>
+    <ion-icon size="large" slot="start" color="secondary" name="school"></ion-icon>
+    <ion-title >{{ folder }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
